# confluence-viz

./: .gitignore  .webui_secret_key  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  CONFLUENCE-VIZ-2-0.md  FILE_ANALYSIS.md  PICKLE_STRUCTURE_ANALYSIS.md  PROPOSED_STRUCTURE.md  README.md  UX_proposal.txt  analyze_extracted_sql.py  app_search.txt  app_serach.example.txt  audit_admins.py  benchmark_upload.py  browse_extracted_sql.py  browse_extracted_sql_web.py  check_config.py  check_empties.py  check_ollama.py  classify_pickled_spaces.py  compare_spaces_to_pickles.py  config.json.example  config_loader.py  confluence-viz  confluence_data.json  confluence_empty_pages_checker.py  confluence_test_data_generator.py  confluence_treepack.html  confluence_upload_test.py  counter.py  counter_pages_from_pickles.py  deletable_pages.txt  delete_confluence_page.py  diagnose_pickle_bodies.py  explore_clusters.py  explore_clusters_v2.py  explore_pickle_content.py  extract_sql_from_pickles.py  fetch_data.py  (+41 more)
confluence-fast-mcp/: .env.example  .gitignore  HACKATHON.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MANIFEST.in  PROJECT_COMPLETE.txt  QUICKSTART.md  README.md  STATUS.md  build_index.py  config.py  convert_to_json.py  converters.py  fallback.py  indexer.py  load_test.py  models.py  pickle_loader.py  pyproject.toml  requirements.txt  search.py  server.py  settings.example.ini  settings.ini  simple_server.py  test_basic.py  test_index_single_page.py  verify_implementation.sh
confluence-fast-mcp/server-go/: .gitignore  go.mod  go.sum  indexer.go  loader.go  main.go  search.go
(+125 files in other folders)
