[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "confluence-fast-mcp"
version = "0.1.0"
description = "Fast MCP server for Confluence using pre-pickled data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=3.0.0",
    "whoosh>=2.7.4",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
confluence-fast-mcp = "confluence_fast_mcp.server:main"
